# nordmacpy

./: .gitignore  README.md  __init__.py  connection.py  download_configs.py  install_openvpn.sh  ip_info.py  list_configs.py  main.py  pass_file.py  pyproject.toml  setup_sudo_permissions.sh  setup_sudo_permissions_simple.sh  vpn_manager.py
examples/: examples.ipynb
