[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nordmacpy"
version = "0.1.0"
description = "Automate NordVPN connections (for users with accounts), on MacOS, in Python."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.setuptools]
package-dir = {"nordmacpy" = "."}
packages = ["nordmacpy"]
